[gd_scene load_steps=6 format=2]

[ext_resource path="res://menus/mainMenu/art/the-cevennes-express_honest-jam-6_main-menu_bg.png" type="Texture" id=1]
[ext_resource path="res://menus/mainMenu/mainMenu_buttons.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/mainMenu/mainMenu.gd" type="Script" id=3]
[ext_resource path="res://managers/audioManager/audioManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://menus/menuElements/creditsPopup.tscn" type="PackedScene" id=5]

[node name="mainMenu" type="CanvasLayer"]
follow_viewport_enable = true
script = ExtResource( 3 )

[node name="audioManager" parent="." instance=ExtResource( 4 )]

[node name="mainMenuBg" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = -920.0
margin_bottom = -500.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="mainMenu_buttons" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 921.0
margin_top = 196.0
margin_right = 1865.0
margin_bottom = 1076.0

[node name="creditsPopout" parent="." instance=ExtResource( 5 )]
